reasoning_transformations/CRUXEval/Transformations/logs/sample_750.log
STARTING AT 2024-10-19 23:03:33.317947
[START] processing file: sample_750
*Running tests for: sample_750
 
Result: ['tests_pass']
tests_pass sample_750 /home/yang/Benchmark/dataset/cruxeval/code//sample_750.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_750
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_750", line 10
    nonlocal newval_1, new_text
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'newval_1' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_750", line 10\n    nonlocal newval_1, new_text\n    ^^^^^^^^^^^^^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'newval_1\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_750
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_750
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_750.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_750.py
*Running tests for: sample_750
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil',
                        'changing_AugAssign'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_750.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_750',
  'genetic_algorithm': None,
  'original_code': 'def f(char_map, text):\n'
                   "    new_text = ''\n"
                   '    for ch in text:\n'
                   '        val = char_map.get(ch)\n'
                   '        if val is None:\n'
                   '            new_text += ch\n'
                   '        else:\n'
                   '            new_text += val\n'
                   '    return new_text',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_750.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_750.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_750.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.360981,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      "    base64.b64encode(b'86560848694412620977')\n"
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(char_map, text):\n'
                      '    Fernet.generate_key()\n'
                      '    shuffle([24, 73, 87])\n'
                      '    time.sleep(0.11)\n'
                      '    datetime.datetime.now()\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    ttest_ind([98, 79, 79], [97, 41, 33])\n'
                      "    parse('2024-10-19 23:03:37')\n"
                      '    try:\n'
                      "        new_text = [''][0]\n"
                      '        LoopChecker13 = 57\n'
                      '        LoopChecker23 = 56\n'
                      '        ConditionChecker18 = 675\n'
                      '        ConditionChecker28 = 469\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for ch in text:\n'
                      '                newval_1 = char_map.get(ch)\n'
                      '                if ConditionChecker18 & '
                      'ConditionChecker28:\n'
                      '                    if newval_1 is None:\n'
                      '                        new_text = new_text + ch\n'
                      '                    else:\n'
                      '                        new_text += newval_1\n'
                      '        else:\n'
                      '            pass\n'
                      '        return new_text\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_750. Total Time: 5.360981
END AT 2024-10-19 23:03:38.680526
